Bugfix, add english locale

--- a/lang/de.json
+++ b/lang/de.json
@@ -144,9 +144,10 @@
     "auth.email.tab_title": "Email",
     "auth.email.title": "Mit einer Email anmelden",
     "auth.error.invalid_configuration": "Die Konfiguration des Anmeldedienstes ist fehlerhaft.",
+    "auth.error.invalid_state": "Fehlerhafter Zustand.",
     "auth.error.login_failed": "Anmeldung fehlgeschlagen",
     "auth.error.missing_attributes": "Es fehlen Attribute für die Authentifizierung.",
-    "auth.error.network_issue": "Es konnte keine Verbindung zum Anmeldedienst aufgebaut werden. Vesuchen Sie es später erneut.",
+    "auth.error.network_issue": "Es konnte keine Verbindung zum Anmeldedienst aufgebaut werden. Versuchen Sie es später erneut.",
     "auth.error.reason": "Fehlergrund",
     "auth.external_id": "Externe ID",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
@@ -161,9 +162,9 @@
     "auth.ldap.title": "Mit einem LDAP-Account anmelden",
     "auth.ldap.username": "Benutzerkennung",
     "auth.ldap.username_help": "Geben Sie die Benutzerkennung (nicht die Email) Ihres LDAP-Account an",
-    "auth.logout_success": "Erfolgreich abgemeldet",
     "auth.login": "Anmelden",
     "auth.logout": "Abmelden",
+    "auth.logout_success": "Erfolgreich abgemeldet",
     "auth.logout_success": "Erfolgreich abgemeldet",
     "auth.new_password": "Neues Passwort",
     "auth.new_password_confirmation": "Neues Passwort bestätigen",
