--- a/lang/en.json
+++ b/lang/en.json
@@ -143,7 +143,12 @@
     "auth.current_password": "Current password",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Login with Email",
+    "auth.error.invalid_configuration": "The configuration of authentication service is incorrect.",
+    "auth.error.invalid_state": "Invalid state.",
+    "auth.error.login_failed": "Login failed",
     "auth.error.missing_attributes": "Attributes for authentication are missing.",
+    "auth.error.network_issue": "Unable to connect to the authentication service. Try again later.",
+    "auth.error.reason": "Error reason",
     "auth.external_id": "External ID",
     "auth.failed": "These credentials do not match our records.",
     "auth.flash.login": "Successfully logged in",
@@ -162,8 +167,16 @@
     "auth.logout_success": "Successfully logged out",
     "auth.new_password": "New password",
     "auth.new_password_confirmation": "New password confirmation",
+    "auth.oidc.logout_incomplete": "Attention: You are still logged in to OpenID Connect.",
+    "auth.oidc.redirect": "Log in",
+    "auth.oidc.tab_title": "OpenID Connect",
+    "auth.oidc.title": "Log in with OpenID Connect",
     "auth.password": "Password",
     "auth.reset_password": "Reset password",
+    "auth.saml2.logout_incomplete": "Attention: You are still logged in to SAML 2.0.",
+    "auth.saml2.redirect": "Log in",
+    "auth.saml2.tab_title": "SAML 2.0",
+    "auth.saml2.title": "Log in with SAML 2.0",
     "auth.send_email_confirm_mail": "A verification email has been sent to {email}. Please confirm the new email address by clicking on the link in the email.",
     "auth.send_password_reset_link": "Send password reset link",
     "auth.sessions.active": "Active sessions",
