add backend functioning and validation

--- a/lang/de.json
+++ b/lang/de.json
@@ -12,6 +12,7 @@
     "app.button_styles.success": "Erfolg",
     "app.button_styles.warning": "Warnung",
     "app.cancel": "Abbrechen",
+    "app.close": "Schließen",
     "app.delete": "Löschen",
     "app.description": "Beschreibung",
     "app.disable": "Deaktivieren",
@@ -54,6 +55,7 @@
     "app.help": "Benötigen Sie Hilfe?",
     "app.home": "Startseite",
     "app.id": "ID",
+    "app.input": "Eingabe",
     "app.lastname": "Nachname",
     "app.link_targets.blank": "In einem neuen Tab öffnen",
     "app.link_targets.self": "Im aktuellen Tab öffnen",
@@ -333,6 +335,13 @@
     "rooms.members.modals.add.select_role": "Bitte wählen Sie eine Rolle aus",
     "rooms.members.modals.add.select_user": "Bitte wählen Sie einen Benutzer aus",
     "rooms.members.modals.add.textarea.description_bulk": "Fügen Sie hier die E-Mail Liste ein",
+    "rooms.members.modals.bulk_import.can_import_users": "Benutzer, die hinzugefügt werden können",
+    "rooms.members.modals.bulk_import.cannot_import_users": "Benutzer, die nicht hinzugefügt werden können",
+    "rooms.members.modals.bulk_import.copied_invalid_users": "Ungültige Benutzer wurden kopiert",
+    "rooms.members.modals.bulk_import.copy_and_close": "Ungültige Benutzer kopieren und Schließen",
+    "rooms.members.modals.bulk_import.could_not_import_users": "Benutzer, die nicht hinzugefügt werden konnten",
+    "rooms.members.modals.bulk_import.import_importable_question": "Möchten Sie fortfahren und die Benutzer hinzufügen, die hinzugefügt werden können?",
+    "rooms.members.modals.bulk_import.imported_users" : "Benutzer die erfolgreich hinzugefügt wurden",
     "rooms.members.modals.edit.title": ":firstname :lastname bearbeiten",
     "rooms.members.modals.edit.title_bulk": ":numberOfSelectedUsers Mitglieder bearbeiten",
     "rooms.members.modals.remove.confirm": "Soll :firstname :lastname aus dem Raum entfernt werden?",
@@ -767,6 +776,8 @@
     "validation.custom.room.not_member": "Der Benutzer \":firstname :lastname\" ist nicht Mitglied des Raums.",
     "validation.custom.room.self_delete": "Sie dürfen sich nicht selbst löschen.",
     "validation.custom.room.self_edit": "Sie dürfen sich nicht selbst bearbeiten.",
+    "validation.custom.room.several_users_found_email": "Es wurden mehrere Benutzer mit dieser E-Mail gefunden",
+    "validation.custom.room.user_not_found_email": "Es wurde kein Benuter mit dieser E-Mail gefunden",
     "validation.custom.servers.*.distinct": "Der Server mit der ID :input wurde mehrfach ausgewählt.",
     "validation.custom.servers.*.exists": "Der Server mit der ID :input konnte nicht gefunden werden.",
     "validation.custom.user.exists": "Der ausgewählte Benutzer konnte nicht gefunden werden.",
