--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
     "app.button_styles.success": "Success",
     "app.button_styles.warning": "Warning",
     "app.cancel": "Cancel",
+    "app.close": "Close",
     "app.delete": "Delete",
     "app.description": "Description",
     "app.disable": "Disable",
@@ -54,6 +55,7 @@
     "app.help": "Do you need help?",
     "app.home": "Home",
     "app.id": "ID",
+    "app.input": "input",
     "app.lastname": "Lastname",
     "app.link_targets.blank": "Open in a new tab",
     "app.link_targets.self": "Open in current tab",
@@ -333,6 +335,13 @@
     "rooms.members.modals.add.select_role": "Please select a role",
     "rooms.members.modals.add.select_user": "Please select the user you would like to add",
     "rooms.members.modals.add.textarea.description_bulk": "Copy and paste the e-mail list here",
+    "rooms.members.modals.bulk_import.can_import_users": "Users that can be added",
+    "rooms.members.modals.bulk_import.cannot_import_users": "Users that can not be added",
+    "rooms.members.modals.bulk_import.copied_invalid_users": "Copied invalid users",
+    "rooms.members.modals.bulk_import.copy_and_close": "Copy users that could not added and close",
+    "rooms.members.modals.bulk_import.could_not_import_users": "Users that were not be added",
+    "rooms.members.modals.bulk_import.import_importable_question": "Do you want to continue to add the users that can be added?",
+    "rooms.members.modals.bulk_import.imported_users" : "Users that were successfully added",
     "rooms.members.modals.edit.title": "Edit :firstname :lastname",
     "rooms.members.modals.edit.title_bulk": "Edit :numberOfSelectedUsers users",
     "rooms.members.modals.remove.confirm": "Do you want to remove :firstname :lastname from this room?",
@@ -767,6 +776,8 @@
     "validation.custom.room.not_member": "The user \":firstname :lastname\" isn't a member.",
     "validation.custom.room.self_delete": "The user is not allowed to delete himself.",
     "validation.custom.room.self_edit": "The user is not allowed to edit himself.",
+    "validation.custom.room.several_users_found_email": "Several users were found with this e-mail",
+    "validation.custom.room.user_not_found_email": "No user was found with this e-mail",
     "validation.custom.servers.*.distinct": "The server with the ID :input was selected more than once.",
     "validation.custom.servers.*.exists": "The server with the ID :input could not be found.",
     "validation.custom.user.exists": "The selected user could not be found.",
