improving error messages

--- a/lang/de.json
+++ b/lang/de.json
@@ -55,7 +55,7 @@
     "app.help": "Benötigen Sie Hilfe?",
     "app.home": "Startseite",
     "app.id": "ID",
-    "app.input": "Eingabe",
+    "app.entry": "Eintrag",
     "app.lastname": "Nachname",
     "app.link_targets.blank": "In einem neuen Tab öffnen",
     "app.link_targets.self": "Im aktuellen Tab öffnen",
@@ -327,14 +327,14 @@
     "rooms.members.edit_user": "Mitglied bearbeiten",
     "rooms.members.image": "Bild",
     "rooms.members.modals.add.add": "Hinzufügen",
-    "rooms.members.modals.add.description_bulk": "Bitte fügen Sie eine E-Mail Liste ein",
-    "rooms.members.modals.add.information_bulk": "Jede Zeile steht für eine eigene E-Mail Adresse",
+    "rooms.members.modals.add.description_bulk": "E-Mail Liste",
+    "rooms.members.modals.add.information_bulk": "Jede Zeile steht für eine eigene E-Mail Adresse (maximal 1000)",
     "rooms.members.modals.add.no_options": "Keine Einträge, bitte suchen Sie nach einem Benutzer.",
     "rooms.members.modals.add.no_result": "Oops! Für diesen Suchbegriff konnten keine Benutzer gefunden werden.",
     "rooms.members.modals.add.preview_bulk": "Importvorschau",
     "rooms.members.modals.add.select_role": "Bitte wählen Sie eine Rolle aus",
     "rooms.members.modals.add.select_user": "Bitte wählen Sie einen Benutzer aus",
-    "rooms.members.modals.add.textarea.description_bulk": "Fügen Sie hier die E-Mail Liste ein",
+    "rooms.members.modals.add.textarea.description_bulk": "max.mustermann@domain.de\nerika.mustermann@domain.de",
     "rooms.members.modals.bulk_import.can_import_users": "Benutzer, die hinzugefügt werden können",
     "rooms.members.modals.bulk_import.cannot_import_users": "Benutzer, die nicht hinzugefügt werden können",
     "rooms.members.modals.bulk_import.copied_invalid_users": "Ungültige Benutzer wurden kopiert",
@@ -746,6 +746,7 @@
     "validation.attributes.title": "Titel",
     "validation.attributes.updated_at": "Aktualisiert am",
     "validation.attributes.user": "Benutzer",
+    "validation.attributes.user_emails": "Email Liste",
     "validation.attributes.user_locale": "Sprache",
     "validation.attributes.username": "Benutzerkennung",
     "validation.attributes.webcams_only_for_moderator": "Webcam nur für Moderatoren sichtbar",
@@ -779,6 +780,7 @@
     "validation.custom.room.several_users_found_email": "Es wurden mehrere Benutzer mit dieser E-Mail gefunden",
     "validation.custom.room.user_not_found_email": "Es wurde kein Benuter mit dieser E-Mail gefunden",
     "validation.custom.servers.*.distinct": "Der Server mit der ID :input wurde mehrfach ausgewählt.",
+    "validation.custom.emails.*.email": ":input ist keine gültige E-mail Adresse.",
     "validation.custom.servers.*.exists": "Der Server mit der ID :input konnte nicht gefunden werden.",
     "validation.custom.user.exists": "Der ausgewählte Benutzer konnte nicht gefunden werden.",
     "validation.date": ":attribute muss ein gültiges Datum sein.",
