--- a/lang/en.json
+++ b/lang/en.json
@@ -55,7 +55,7 @@
     "app.help": "Do you need help?",
     "app.home": "Home",
     "app.id": "ID",
-    "app.input": "input",
+    "app.entry": "entry",
     "app.lastname": "Lastname",
     "app.link_targets.blank": "Open in a new tab",
     "app.link_targets.self": "Open in current tab",
@@ -327,14 +327,14 @@
     "rooms.members.edit_user": "Edit member",
     "rooms.members.image": "Picture",
     "rooms.members.modals.add.add": "Add",
-    "rooms.members.modals.add.description_bulk": "Please insert an e-mail list",
-    "rooms.members.modals.add.information_bulk": "Every line represents a separate e-mail address",
+    "rooms.members.modals.add.description_bulk": "E-mail list",
+    "rooms.members.modals.add.information_bulk": "Every line represents a separate e-mail address (maximum 1000)",
     "rooms.members.modals.add.no_options": "No entries, please search for a user.",
     "rooms.members.modals.add.no_result": "Oops! No user was found for this query.",
     "rooms.members.modals.add.preview_bulk": "Import preview",
     "rooms.members.modals.add.select_role": "Please select a role",
     "rooms.members.modals.add.select_user": "Please select the user you would like to add",
-    "rooms.members.modals.add.textarea.description_bulk": "Copy and paste the e-mail list here",
+    "rooms.members.modals.add.textarea.description_bulk": "john.doe@domain.com\njane.doe@domain.com",
     "rooms.members.modals.bulk_import.can_import_users": "Users that can be added",
     "rooms.members.modals.bulk_import.cannot_import_users": "Users that can not be added",
     "rooms.members.modals.bulk_import.copied_invalid_users": "Copied invalid users",
@@ -746,6 +746,7 @@
     "validation.attributes.title": "Title",
     "validation.attributes.updated_at": "Updated at",
     "validation.attributes.user": "User",
+    "validation.attributes.user_emails": "Email list",
     "validation.attributes.user_locale": "Language",
     "validation.attributes.username": "Username",
     "validation.attributes.webcams_only_for_moderator": "Only moderators can see the webcam",
@@ -779,6 +780,7 @@
     "validation.custom.room.several_users_found_email": "Several users were found with this e-mail",
     "validation.custom.room.user_not_found_email": "No user was found with this e-mail",
     "validation.custom.servers.*.distinct": "The server with the ID :input was selected more than once.",
+    "validation.custom.user_emails.*.email": ":input is not a valid e-mail.",
     "validation.custom.servers.*.exists": "The server with the ID :input could not be found.",
     "validation.custom.user.exists": "The selected user could not be found.",
     "validation.date": "The :attribute is not a valid date.",
