Restructure admin components, add custom tiptap editor

--- a/lang/de.json
+++ b/lang/de.json
@@ -11,6 +11,7 @@
     "app.button_styles.secondary": "Sekundär",
     "app.button_styles.success": "Erfolg",
     "app.button_styles.warning": "Warnung",
+    "app.continue": "Weiter",
     "app.cancel": "Abbrechen",
     "app.delete": "Löschen",
     "app.description": "Beschreibung",
@@ -278,6 +279,26 @@
     "rooms.copy_access_for_participants": "Zugangsdaten für Teilnehmer in Zwischenablage kopieren",
     "rooms.create.ok": "Erstellen",
     "rooms.create.title": "Neuen Raum erstellen",
+    "rooms.description.cancel": "Abbrechen",
+    "rooms.description.color.black": "Schwarz",
+    "rooms.description.color.blue": "Blau",
+    "rooms.description.color.green": "Grün",
+    "rooms.description.color.red": "Rot",
+    "rooms.description.edit": "Bearbeiten",
+    "rooms.description.heading1": "Überschrift 1",
+    "rooms.description.heading2": "Überschrift 2",
+    "rooms.description.heading3": "Überschrift 3",
+    "rooms.description.highlight.green": "Grün",
+    "rooms.description.highlight.red": "Rot",
+    "rooms.description.highlight.yellow": "Gelb",
+    "rooms.description.image": "URL des Bildes",
+    "rooms.description.link": "URL des Links",
+    "rooms.description.link.warning.title": "Externer Link",
+    "rooms.description.link.warning.description": "Sie werden zu folgender URL weitergeleitet:",
+    "rooms.description.missing": "Keine Beschreibung vorhanden",
+    "rooms.description.paragraph": "Absatz",
+    "rooms.description.save": "Speichern",
+    "rooms.description.title": "Beschreibung",
     "rooms.end_membership.button": "Mitgliedschaft beenden",
     "rooms.end_membership.message": "Sie verlieren die Rolle, die mit Ihrer Mitgliedschaft verbunden ist. Um wieder Mitglied zu werden, müssen Sie eventuell den Raumbesitzer fragen. Wenn der Raum einen Zugangscode hat, müssen Sie diesen kennen, um weiterhin Zugang zu dem Raum zu haben.",
     "rooms.end_membership.no": "Nein, Mitgliedschaft beibehalten",
