--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
     "app.button_styles.secondary": "Secondary",
     "app.button_styles.success": "Success",
     "app.button_styles.warning": "Warning",
+    "app.continue": "Continue",
     "app.cancel": "Cancel",
     "app.delete": "Delete",
     "app.description": "Description",
@@ -278,6 +279,27 @@
     "rooms.copy_access_for_participants": "Copy access for participants to clipboard",
     "rooms.create.ok": "Create",
     "rooms.create.title": "Create new room",
+    "rooms.description.cancel": "Cancel",
+    "rooms.description.color.black": "Black",
+    "rooms.description.color.blue": "Blue",
+    "rooms.description.color.green": "Green",
+    "rooms.description.color.red": "Red",
+    "rooms.description.edit": "Edit",
+    "rooms.description.heading1": "Heading 1",
+    "rooms.description.heading2": "Heading 2",
+    "rooms.description.heading3": "Heading 3",
+    "rooms.description.highlight.green": "Green",
+    "rooms.description.highlight.red": "Red",
+    "rooms.description.highlight.yellow": "Yellow",
+    "rooms.description.image": "URL of the image",
+    "rooms.description.link": "URL of the link",
+    "rooms.description.link.warning.title": "External Link",
+    "rooms.description.link.warning.description": "You are beeing redirected to the following URL:",
+    "rooms.description.missing": "No description available",
+    "rooms.description.paragraph": "Paragraph",
+    "rooms.description.save": "Save",
+    "rooms.description.title": "Description",
+
     "rooms.end_membership.button": "End membership",
     "rooms.end_membership.message": "You will lose the role associated with your membership. To become a member again, you may need to ask the room owner. If the room has an access code, you will need to know it to continue to have access to the room.",
     "rooms.end_membership.no": "No, keep membership",
