--- a/lang/de.json
+++ b/lang/de.json
@@ -327,21 +327,22 @@
     "rooms.members.edit_user": "Mitglied bearbeiten",
     "rooms.members.image": "Bild",
     "rooms.members.modals.add.add": "Hinzufügen",
-    "rooms.members.modals.add.description_bulk": "E-Mail Liste",
-    "rooms.members.modals.add.information_bulk": "Jede Zeile steht für eine eigene E-Mail Adresse (maximal 1000)",
     "rooms.members.modals.add.no_options": "Keine Einträge, bitte suchen Sie nach einem Benutzer.",
     "rooms.members.modals.add.no_result": "Oops! Für diesen Suchbegriff konnten keine Benutzer gefunden werden.",
     "rooms.members.modals.add.preview_bulk": "Importvorschau",
     "rooms.members.modals.add.select_role": "Bitte wählen Sie eine Rolle aus",
     "rooms.members.modals.add.select_user": "Bitte wählen Sie einen Benutzer aus",
-    "rooms.members.modals.add.textarea.description_bulk": "max.mustermann@domain.de\nerika.mustermann@domain.de",
     "rooms.members.modals.bulk_import.can_import_users": "Benutzer, die hinzugefügt werden können",
     "rooms.members.modals.bulk_import.cannot_import_users": "Benutzer, die nicht hinzugefügt werden können",
     "rooms.members.modals.bulk_import.copied_invalid_users": "Ungültige Benutzer wurden kopiert",
     "rooms.members.modals.bulk_import.copy_and_close": "Ungültige Benutzer kopieren und Schließen",
     "rooms.members.modals.bulk_import.could_not_import_users": "Benutzer, die nicht hinzugefügt werden konnten",
+    "rooms.members.modals.bulk_import.description.modal": "Jede Zeile steht für eine eigene E-Mail Adresse (maximal 1000)",
+    "rooms.members.modals.bulk_import.placeholder.textarea": "max.mustermann@domain.de\nerika.mustermann@domain.de",
+    "rooms.members.modals.bulk_import.import_importable_button": "Gültige Benutzer hinzufügen",
     "rooms.members.modals.bulk_import.import_importable_question": "Möchten Sie fortfahren und die Benutzer hinzufügen, die hinzugefügt werden können?",
     "rooms.members.modals.bulk_import.imported_users" : "Benutzer die erfolgreich hinzugefügt wurden",
+    "rooms.members.modals.bulk_import.label": "E-Mail Liste",
     "rooms.members.modals.edit.title": ":firstname :lastname bearbeiten",
     "rooms.members.modals.edit.title_bulk": ":numberOfSelectedUsers Mitglieder bearbeiten",
     "rooms.members.modals.remove.confirm": "Soll :firstname :lastname aus dem Raum entfernt werden?",
@@ -780,7 +781,7 @@
     "validation.custom.room.several_users_found_email": "Es wurden mehrere Benutzer mit dieser E-Mail gefunden",
     "validation.custom.room.user_not_found_email": "Es wurde kein Benuter mit dieser E-Mail gefunden",
     "validation.custom.servers.*.distinct": "Der Server mit der ID :input wurde mehrfach ausgewählt.",
-    "validation.custom.emails.*.email": ":input ist keine gültige E-mail Adresse.",
+    "validation.custom.user_emails.*.email": ":input ist keine gültige E-mail Adresse.",
     "validation.custom.servers.*.exists": "Der Server mit der ID :input konnte nicht gefunden werden.",
     "validation.custom.user.exists": "Der ausgewählte Benutzer konnte nicht gefunden werden.",
     "validation.date": ":attribute muss ein gültiges Datum sein.",
