--- a/lang/en.json
+++ b/lang/en.json
@@ -327,21 +327,22 @@
     "rooms.members.edit_user": "Edit member",
     "rooms.members.image": "Picture",
     "rooms.members.modals.add.add": "Add",
-    "rooms.members.modals.add.description_bulk": "E-mail list",
-    "rooms.members.modals.add.information_bulk": "Every line represents a separate e-mail address (maximum 1000)",
     "rooms.members.modals.add.no_options": "No entries, please search for a user.",
     "rooms.members.modals.add.no_result": "Oops! No user was found for this query.",
     "rooms.members.modals.add.preview_bulk": "Import preview",
     "rooms.members.modals.add.select_role": "Please select a role",
     "rooms.members.modals.add.select_user": "Please select the user you would like to add",
-    "rooms.members.modals.add.textarea.description_bulk": "john.doe@domain.com\njane.doe@domain.com",
     "rooms.members.modals.bulk_import.can_import_users": "Users that can be added",
     "rooms.members.modals.bulk_import.cannot_import_users": "Users that can not be added",
     "rooms.members.modals.bulk_import.copied_invalid_users": "Copied invalid users",
     "rooms.members.modals.bulk_import.copy_and_close": "Copy users that could not added and close",
     "rooms.members.modals.bulk_import.could_not_import_users": "Users that were not be added",
+    "rooms.members.modals.bulk_import.description.modal": "Every line represents a separate e-mail address (maximum 1000)",
+    "rooms.members.modals.bulk_import.placeholder.textarea": "john.doe@domain.com\njane.doe@domain.com",
+    "rooms.members.modals.bulk_import.import_importable_button": "Add valid users",
     "rooms.members.modals.bulk_import.import_importable_question": "Do you want to continue to add the users that can be added?",
     "rooms.members.modals.bulk_import.imported_users" : "Users that were successfully added",
+    "rooms.members.modals.bulk_import.label": "E-mail list",
     "rooms.members.modals.edit.title": "Edit :firstname :lastname",
     "rooms.members.modals.edit.title_bulk": "Edit :numberOfSelectedUsers users",
     "rooms.members.modals.remove.confirm": "Do you want to remove :firstname :lastname from this room?",
@@ -780,7 +781,7 @@
     "validation.custom.room.several_users_found_email": "Several users were found with this e-mail",
     "validation.custom.room.user_not_found_email": "No user was found with this e-mail",
     "validation.custom.servers.*.distinct": "The server with the ID :input was selected more than once.",
-    "validation.custom.user_emails.*.email": ":input is not a valid e-mail.",
+    "validation.custom.user_emails.*.email" : ":input is not a valid e-mail.",
     "validation.custom.servers.*.exists": "The server with the ID :input could not be found.",
     "validation.custom.user.exists": "The selected user could not be found.",
     "validation.date": "The :attribute is not a valid date.",
