--- a/lang/de.json
+++ b/lang/de.json
@@ -320,7 +320,7 @@
     "rooms.login": "Anmelden",
     "rooms.meeting_history.title": "Historie",
     "rooms.members.add_user": "Benutzer hinzufügen",
-    "rooms.members.bulk_add_user": "Mehrere Benutzer hinzufügen",
+    "rooms.members.bulk_import_users": "Mehrere Benutzer hinzufügen",
     "rooms.members.bulk_edit_user": ":numberOfSelectedUsers Mitglieder bearbeiten",
     "rooms.members.bulk_remove_user": ":numberOfSelectedUsers Mitglieder löschen",
     "rooms.members.edit_user": "Mitglied bearbeiten",
